--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -113,7 +113,7 @@
                         </wi-button>
                         <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.WipmButtonClicked">
                         </wi-button>
-                        <wi-button name="WellImport" icon="well-load-32x32" label="Well Import" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.WellImportClicked"></wi-button>
+                        <wi-button name="WellImport" icon="well-load-32x32" label="Mega Import" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.WellImportClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
@@ -124,136 +124,6 @@
         <wi-context-menu name="ContextMenu"></wi-context-menu>
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
-    <template id='import-block' style="background: #F2F2F2;">
-        <style media="screen">
-            textarea {
-                resize: none;
-            }
-            .flexs>div {
-                border: 1px solid #ccc;
-                flex: 1;
-                margin: 5px;
-                padding: 5px;
-                box-shadow: inset 1px 1px 1px #e1e1e1;
-                background-color: #ffffff;
-                border-radius: 5px;
-            }
-            div.lm_content {
-                display: flex;
-                flex-direction: column;
-            }
-            .lm_content {
-                background: #f4f4f4f4;
-            }
-
-            h5 {
-                color: blue;
-            }
-        </style>
-        <h3 class='content-heading' style="text-align:left;">I2G Import Tool</h3>
-        <div style="flex:1; display:flex;flex-direction:column" class="modal-body">
-            <div style="flex:1;display:flex; width:100%;margin:auto;" class="flexs">
-                <div>
-                    <h5>Workflow Management</h5>
-                    <div class="col-sm-6">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Check</th>
-                                    <th>Well</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <i class='glyphicon glyphicon-ok' style="color: black;"></i>
-                                    </td>
-                                    <td>well 1</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <i class='glyphicon glyphicon-ok' style="color: #ccc"></i>
-                                    </td>
-                                    <td>well 1</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-sm-6">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Well</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>well 1</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div>
-                    <form class="form-horizontal">
-                        <h5>Create Workflow</h5>
-                        <div class="form-group">
-                            <label class="control-label col-sm-4">Name:</label>
-                            <div class="col-sm-6">
-                                <input class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-4">Host:</label>
-                            <div class="col-sm-6">
-                                <input type="email" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-4">Post:</label>
-                            <div class="col-sm-6">
-                                <input class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-4">Path:</label>
-                            <div class="col-sm-6">
-                                <input type="email" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-4">Data Dir:</label>
-                            <div class="col-sm-6">
-                                <input class="form-control">
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="">
-                                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
-                                </a>
-                            </div>
-                        </div>
-                </div>
-                <div>
-                    <h5>Run Workflow</h5>
-                    <div class="form-group">
-                        <div class="col-sm-4">
-                            <button type="button" class="btn btn-default" name="button">Run</button>
-                        </div>
-                        <div class="col-sm-8">
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-                    <!-- <div class="form-group"><wi-progress-bar percent= 0></wi-progress-bar></div> -->
-                    <h5>Result</h5>
-                    <div class="form-group">
-                        <div class="col-sm-12">
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </template>
     <template id="wipm" >
         <wi-predict-model name="wipm"></wi-predict-model>
         <!-- @@include('./wipm/index.html') -->
@@ -261,7 +131,7 @@
 
     <template id="well-import">
         <div style='height:100%;display:flex;flex-direction:column;background-color:#f4f4f4;'>
-            <h3 class="content-heading">Well import tool</h3>
+            <h3 class="content-heading">Mega Import</h3>
             @@include('./well-import/index.html')
         </div>
     </template>
