--- a/source/html/well-import/manage-stage/index.html
+++ b/source/html/well-import/manage-stage/index.html
@@ -71,7 +71,7 @@
                         href='' class='btn btn-default' target='_blank'>
                         <i class="fa fa-file-o"></i>
                     </a>
-                    <button ng-click=''><span class='run-16x16'></span></button>
+                    <button ng-click='importWellHeaderCSV(whCSV)'><span class='run-16x16'></span></button>
                     <button ng-click='deleteWellHeaderCSV(whCSV.idUserFileUploaded)'><span class='close-16x16-edit'></span></button>
                 </div>
             </li>
@@ -92,7 +92,7 @@
                         href='' class='btn btn-default' target='_blank'>
                         <i class="fa fa-file-o"></i>
                     </a>
-                    <button ng-click=''><span class='run-16x16'></span></button>
+                    <button ng-click='importWellTopCSV(wtCSV)'><span class='run-16x16'></span></button>
                     <button ng-click='deleteWellTopCSV(wtCSV.idUserFileUploaded)'><span class='close-16x16-edit'></span></button>
                 </div>
             </li>
