--- a/source/html/index.html
+++ b/source/html/index.html
@@ -10,6 +10,7 @@
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.css">
 
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
@@ -99,6 +100,7 @@
     <script src="vendor/js/angular-sanitize.min.js"></script>
 
     <script src="vendor/js/toastr.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/angular-wizard@latest/dist/angular-wizard.min.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
 
