--- a/source/html/online-inventory/index.html
+++ b/source/html/online-inventory/index.html
@@ -24,8 +24,8 @@
 </style>
 <div style="flex:1;display:flex;flex-direction:row;">
     <wii-explorer name='wiiExplorer' style="margin-left:1em;flex: 4"></wii-explorer>
-    <wii-items name="wiiItems" style="flex: 3"></wii-items>
-    <wii-properties name="wiiProperties" style="flex: 3"></wii-properties>
+    <wii-items name="wiiItems" style="flex: 3;overflow:hidden;"></wii-items>
+    <wii-properties name="wiiProperties" style="flex: 3;overflow:auto;"></wii-properties>
 </div>
 <!--
 <style>
