fix css discriminator

--- a/source/dialogs/discriminator/discriminator-modal.html
+++ b/source/dialogs/discriminator/discriminator-modal.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Discriminators</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="overflow:unset;">
                 <div class="text-right">
                         <button class="btn btn-default" ng-click="wiModal.deleteCondition()">Delete</button>
                         <button class="btn btn-default" ng-click="wiModal.addCondition()">Add</button>
