--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -111,7 +111,9 @@
                                             <div class="col-sm-8">
                                                 <input type="number" class="form-control wi-form-control"
                                                        value="" name="majorTicks" id="majorTicks"
-                                                        ng-model="wiModal.props.general.majorTicks" ng-disabled="!wiModal.props.general.showValueGrid">
+                                                        ng-model="wiModal.props.general.majorTicks" 
+                                                        ng-disabled="!wiModal.props.general.showValueGrid"
+                                                        ng-blur="wiModal.onRangeValue();">
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -120,7 +122,8 @@
                                                 <input type="number" class="form-control wi-form-control"
                                                        value="" name="minorTicks" id="minorTicks"
                                                         ng-model="wiModal.props.general.minorTicks"
-                                                       ng-disabled="!wiModal.props.general.showValueGrid">
+                                                        ng-disabled="!wiModal.props.general.showValueGrid"
+                                                        ng-blur="wiModal.onRangeValue();">
                                             </div>
                                         </div>
                                         <div class="form-group">
