update zoom factor for track bulk update dialog

--- a/source/dialogs/track-bulk-update/track-bulk-update-modal.html
+++ b/source/dialogs/track-bulk-update/track-bulk-update-modal.html
@@ -74,8 +74,7 @@
                                 <td width="10%">
                                     <input type="number" step="any"
                                             ng-model="track.zoomFactor"
-                                            class="form-control wi-form-control"
-                                            ng-disabled="track.type != 'Log Track'">
+                                            class="form-control wi-form-control">
                                 </td>
                                 <td width="10%">
                                     <button ng-click="wiModal.colorTrack(track);"
