--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -112,7 +112,7 @@
                         </wi-button>
                         <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.WipmButtonClicked">
                         </wi-button>
-                        <wi-button name="WellImport" icon="well-load-32x32" label="Mega Import" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.WellImportClicked"></wi-button>
+                        <wi-button name="BatchTools" icon="well-load-32x32" label="Batch Tools" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.BatchToolsClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
